# frisquet-commander

./: .gitignore  Cargo.toml  config.toml.template
.github/workflows/: rust.yml
src/: frisquet.rs  main.rs  messages.rs
src/frisquet/proto/: chaudiere.rs  common.rs  mod.rs  satellite.rs  sonde.rs
src/rf/: mod.rs
src/rf/mqtt/: messages.rs  mod.rs
src/rf/serial/: mod.rs
