[package]
name = "frisquet-commander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13.1"


binascii = "0.1.4"
typetag = "0.2"
nom = "7"
deku = "0.16.0"
hexlit = "0.5.5"
hex = "0.4.3"